2012-05-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/reiserfs.c (grub_reiserfs_iterate_dir): Fix size byteswap
	with old reiserfs.
	(grub_reiserfs_open): Don't free root.

2012-05-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (grub_fshelp_find_file): Set currnode to 0
	after freeing for safety.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/sleep.c (do_print): Add missing grub_refresh.
	Reported by: Jordan Uggla.

2012-05-21  Jordan Uggla  <jordan.uggla@gmail.com>

	* docs/grub.texi Fix documentation of GRUB_HIDDEN_TIMOUNT to match the
	actual implementation. Specifically, clarify that the grub menu will
	be displayed for GRUB_TIMOUT seconds after the hidden timeout has
	passed.

2012-05-21  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* grub-core/kern/powerpc/dl.c (trampoline_template): Use r12 instead
	of r0.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove unjustified hard dependency of normal.mod on gfxterm.

	* include/grub/term.h (grub_term_output): New member fullscreen.
	* include/grub/gfxterm.h (grub_gfxterm_fullscreen): Removed.
	* grub-core/term/gfxterm.c (grub_gfxterm_fullscreen): Make static.
	(grub_gfxterm): Set .fullscreen.
	* grub-core/normal/menu.c (menu_init): Use fullscreen.
	* grub-core/gfxmenu/gfxmenu.c (GRUB_MOD_INIT): Likewise.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Internationalisation/Filesystems): Add precisions
	mentioning possible problems with non-ASCII (non-compliant) ISOs.
	Mention case-insensitive AFFS, SFS and JFS.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_mtime): Add missing grub_dl_ref.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/fs.c (grub_fs_probe): Handle GRUB_ERR_OUT_OF_RANGE as
	a bad FS.

2012-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Mark plain